Quick fix for scrollbar on Events

--- a/docroot/themes/custom/ucsf/assets/css/style.css
+++ b/docroot/themes/custom/ucsf/assets/css/style.css
@@ -5876,11 +5876,13 @@ a[href*="http"] .article-header__date {
   margin: 0 auto;
   max-width: 1280px;
   list-style: none;
-  padding: 0;
-  overflow-x: scroll;
-  overflow-y: hidden;
-  -webkit-overflow-scrolling: touch;
-  white-space: nowrap; }
+  padding: 0; }
+  @media (max-width: 768px) {
+    .lastest-events-list__cards {
+      overflow-x: scroll;
+      overflow-y: hidden;
+      -webkit-overflow-scrolling: touch;
+      white-space: nowrap; } }
   .lastest-events-list__cards.card-three-up {
     display: block; }
     @media (min-width: 1050px) {
