--- a/docroot/themes/custom/ucsf/scss/paragraph/_paragraph-events.scss
+++ b/docroot/themes/custom/ucsf/scss/paragraph/_paragraph-events.scss
@@ -55,17 +55,12 @@
   max-width: $xl;
   list-style: none;
   padding: 0;
-  overflow-x: scroll;
-  overflow-y: hidden;
-  -webkit-overflow-scrolling: touch;
-  white-space: nowrap;
 
-  @include breakpoint($new-small) {
-
-  }
-
-  @include breakpoint($new-large) {
-
+  @include breakpoint($new-small-max) {
+    overflow-x: scroll;
+    overflow-y: hidden;
+    -webkit-overflow-scrolling: touch;
+    white-space: nowrap;
   }
 
   &.card-three-up {
